refactor: 파일 업로드중 오류시 예외 발생으로 변경